# DistributedMLP

./: CMakeLists.txt  ML.cpp  ML.hpp  client.cpp  compute.thrift  compute_client.cpp  compute_nodes.txt  compute_server.cpp  coordinator.cpp  readme.md
gen-cpp/: Compute.cpp  Compute.h  compute_types.h  coordinator.cpp  coordinator.h  coordinator_types.h  data_types.cpp  data_types.h
thirft_files/: coordinator.thrift  data.thrift
